Fixed Colors,Removed Scrollbar,updated functions,handled initialView

--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,10 @@
   font-family: "Poppins", "cursive";
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 .hoverEffects {
   transition: all 900ms ease;
   opacity: 0;
